@@ -1,3 +1,7 @@
+* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 0.3.4-0
+- Updated $app_pki_external_source to accept any string.  This matches the functionality
+  of pki::copy.
+
 * Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.3.4-0
 - Drop Hiera 4 support
 
